# maths-traits

./: Cargo.toml  LICENSE  README.md  readme.md
src/: lib.rs  traits.rs
src/algebra/: group_like.rs  integer.rs  mod.rs  module_like.rs  ring_like.rs
src/analysis/: metric.rs  mod.rs  ordered.rs  real.rs
