[package]
authors = ["Joshua Smith <anvil775@gmail.com>"]
name = "maths-traits"
description = "A simple to use yet abstract system of mathematical traits for the Rust language"
version = "0.1.1"
keywords = ["mathematics", "numerics", "algebra", "integer", "real numbers"]
categories = ["algorithms", "science"]
repository = "https://github.com/anvil777/maths-traits"
documentation = "https://docs.rs/maths-traits"
license = "MIT"
readme = "README.md"

[dependencies]
num-traits = "0.2"
