[package]
authors = ["Joshua Smith <jsmith62831@gmail.com>"]
name = "maths-traits"
description = "A simple to use yet abstract system of mathematical traits for the Rust language"
version = "0.2.1"
edition = "2018"
keywords = ["mathematics", "numerics", "algebra", "integer", "real-numbers"]
categories = ["algorithms", "science", "no-std"]
repository = "https://github.com/anvil777/maths-traits"
documentation = "https://docs.rs/maths-traits"
license = "MIT"
readme = "README.md"

[dependencies]
num-traits = {version = "^0.2", default-features = false}
num-integer = {version = "^0.1", optional = true}
num-bigint = {version = "^0.3", optional = true}
num-rational = {version = "^0.3", optional = true}

[package.metadata.docs.rs]
features = ["std"]

[features]
default = ["std"]
std = []

bigint = ["num-bigint", "num-integer"]
rational = ["num-rational", "num-integer"]
num = ["bigint", "rational"]
