[package]
authors = ["Joshua Smith <anvil775@gmail.com>"]
name = "maths-traits"
description = "A simple to use yet abstract system of mathematical traits for the Rust language"
version = "0.2.1"
edition = "2018"
keywords = ["mathematics", "numerics", "algebra", "integer", "real-numbers"]
categories = ["algorithms", "science", "no-std"]
repository = "https://github.com/jsmith628/maths-traits"
documentation = "https://docs.rs/maths-traits"
license = "MIT"
readme = "README.md"

[dependencies]
num-traits = {version = "0.2", default-features = false}

[package.metadata.docs.rs]
features = ["std"]

[features]
default = ["std"]
std = []
